sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:5: error: not found: value auMoinsUnEchange
  while(ecart > 1 || auMoinsUnEchange)
                     ^AlgCombSort:7: error: type mismatch;
 found   : Int(0)
 required: Boolean
    var auMoinsUnEchange : Boolean = 0
                                     ^AlgCombSort:16: error: type mismatch;
 found   : Int(1)
 required: Boolean
        auMoinsUnEchange = 1
                           ^